[feat] Final touch before presentation (#91)